# python-project-174

./: .coverage  .flake8  .gitignore  LEARNING_LOG.md  LESSONS.md  Makefile  README.md  coverage.xml  demo1.cast  demo2.cast  pyproject.toml  sonar-project.properties
.github/workflows/: pyci.yml
gendiff/: __init__.py
gendiff/scripts/: gendiff.py
gendiff/src/: core_differ.py  formatters.py  generate_diff.py  parsers.py
gendiff/src/formatters/: __init__.py  plain.py  stylish.py
obsidian_calc/Calculadora/: Paso 3.md  Paso 4.md  Paso 6.md  Paso 7.md
obsidian_calc/Calculadora/.obsidian/: workspace.json
tests/: test_gendiff.py
tests/fixtures/: expected.txt  file1.json  file2.json
tests/fixtures/yaml/: expected.txt  file1.yaml  file2.yaml
