[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [
    {name = "alexlealch",email = "alexlealcha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "gendiff" },
]

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
